# rpi_camera_colony

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pypirc  .secrets.baseline  .toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  pr-to-prod.yaml  pre-pr-checks.yaml  release-to-deploy.yaml  test_and_deploy.yaml  test_deploy.yaml
example_configs/: example.config  example_2180x720x60.config  example_640x480x60.config
rpi_camera_colony/: __init__.py  files.py  log.py  network_communication.py  readers.py
rpi_camera_colony/acquisition/: __main__.py  acquisition_control.py  camera.py  remote_control.py  streaming.py
rpi_camera_colony/calibration/: __init__.py  __main__.py
rpi_camera_colony/config/: __init__.py  config.py  example.config  example_1640x1232x40.config  example_2180x720x60.config  example_640x480x60.config  spec.config
rpi_camera_colony/control/: __init__.py  conductor.py  main.py  process_sandbox.py
rpi_camera_colony/server/: main.py
rpi_camera_colony/tools/: comms.py  files.py  log.py  readers.py
scripts/: collect_data_from_remotes.sh  convert_h264_to_mp4.sh  distribute_code.sh  remove_remote_data.sh  upload_data.sh
tests/: run_conductor_example.py
tests/tests/test_integration/: test_placeholder.py
tests/tests/test_unit/: test_config.py  test_unit.py
