[metadata]
name = rpi_camera_colony
version = 0.4.9.dev0
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = BSD License
license_files = LICENSE
description = RPi Camera Colony: Central control for video acquisition with (many) Raspberry Pi cameras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/rpi_camera_colony
project_urls =
	Issue Tracker = https://github.com/larsrollik/rpi_camera_colony/issues
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
	pyzmq
	tornado
	tqdm
	configobj
	numpy
	pandas
	rich

[options.packages.find]
where =

[options.extras_require]
rpi =
	picamera
	RPi.GPIO

dev =
	black
	coverage
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8

[options.entry_points]
console_scripts =
	rcc_conductor = rpi_camera_colony.control.main:main
	rcc_acquisition = rpi_camera_colony.acquisition.__main__:main
	rcc_calibration = rpi_camera_colony.calibration.__main__:main

[options.package_data]
* = *.config

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
